changed stylesheet, used overide rule on html tag, stop horizontal scroll

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,9 +1,8 @@
-.skill-card-body {
-  border: 2px solid blue;
+html {
+  overflow-x: hidden;
 }
 
 /* Navigation Section Start */
-
 .customNav {
   width: 100%;
   background: url("../images/transparency.png");
@@ -45,6 +44,7 @@
 /* ------------------------------------------------------------- */
 .aboutMeContainer {
   background-color: purple;
+  border: 5px solid gold;
 }
 
 .aboutMeImg {
@@ -61,8 +61,12 @@
 }
 
 .valueProp {
-  margin-top: 15px;
-  margin-bottom: 15px;
+  border: 5px solid hotpink;
+}
+
+.imageContainer img {
+  height: 200px;
+  width: 300px;
 }
 /* Work Section End */
 
@@ -72,10 +76,14 @@
   border: 5px solid green;
 }
 
-/* Footer Section End */
+/* My Skill Section End */
 
-/* My Skill Section Start */
+/* Footer Section Start */
 /* ------------------------------------------------------------- */
+.skill-card-body {
+  border: 2px solid blue;
+}
+
 .footerContainer {
   border: 5px solid blue;
 }
